@@ -1,5 +1,8 @@
 /*
  * $Log: tls.h,v $
+ * Revision 1.7  2021-03-10 18:16:57+05:30  Cprogrammer
+ * added proto for set_essential_fd()
+ *
  * Revision 1.6  2021-03-09 00:53:13+05:30  Cprogrammer
  * translate() function made generic and can work with non-ssl
  * added ssl_timeout.. functions
@@ -46,6 +49,7 @@ ssize_t         ssl_timeoutread(long, int, int, SSL *, char *, size_t);
 ssize_t         ssl_timeoutwrite(long, int, int, SSL *, char *, size_t);
 int             ssl_timeoutrehandshake(long, int, int, SSL *);
 const char     *myssl_error_str();
+void            set_essential_fd(int fd);
 #endif
 
 #endif
